--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ body {
   font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #fff;
-  border-radius: 24px;
 }
 
 a {
@@ -16,10 +15,10 @@ ul {
 /*логотип*/
 .logo {
   color: #4d5ae5;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
@@ -86,7 +85,6 @@ span {
 
 .hero-title {
   color: #fff;
-  text-align: center;
   font-family: Roboto;
   font-size: 56px;
   font-weight: 700;
@@ -101,16 +99,12 @@ span {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  border-radius: 4px;
   background: #4d5ae5;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
 
 .button:hover {
-  border-radius: 4px;
   background: #404bbf;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 h3 {
@@ -137,7 +131,6 @@ p {
 
 .team-title {
   color: #2E2F42;
-  text-align: center;
   font-family: Roboto;
   font-size: 20px;
   font-weight: 500;
@@ -147,7 +140,6 @@ p {
 
 .team-text {
   color: #434455;
-  text-align: center;
   font-family: Roboto;
   font-size: 16px;
   font-weight: 400;
@@ -157,7 +149,6 @@ p {
 
 h2 {
   color: #2E2F42;
-  text-align: center;
   font-family: Roboto;
   font-size: 36px;
   font-weight: 700;
@@ -199,10 +190,10 @@ footer {
 
 #second-part {
   color: #F4F4FD;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
