--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ ul {
   list-style-type: none;
 }
 
-/*логотип*/
+/*Header*/
+/*Logo*/
 .logo {
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
@@ -23,6 +24,7 @@ ul {
   text-transform: uppercase;
 }
 
+/*Second part of logo*/
 span {
   color: #2e2f42;
   font-family: Raleway;
@@ -33,8 +35,8 @@ span {
   text-transform: uppercase;
 }
 
-/**/
-.menu {
+/*menu navigation */
+.menu-list {
   color: #2e2f42;
   font-family: Roboto;
   font-size: 16px;
@@ -43,7 +45,58 @@ span {
   letter-spacing: 0.02em;
 }
 
-.menu:hover {
+.menu-list:hover {
+  color: #404BBF;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.studio-link:active {
+  color: #404BBF;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+/*contacts*/
+.contacts {
+  color: var(--SLATE, #434455);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.email-link {
+  color: #434455;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.number-link {
+  color: #434455;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+
+
+.menu-list:hover {
   color: #404bbf;
   font-family: Roboto;
   font-size: 16px;
@@ -175,20 +228,11 @@ h2 {
   letter-spacing: 0.02em;
 }
 
-footer>p {
-  color: #F4F4FD;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
-footer {
+.footer-content {
   background-color: #2E2F42;
 }
 
-#second-part {
+.logo .second-part {
   color: #F4F4FD;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
@@ -196,4 +240,13 @@ footer {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+
+.footer-text {
+  color: #F4F4FD;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
