--- a/css/style.css
+++ b/css/style.css
@@ -200,10 +200,26 @@ p {
   letter-spacing: 0.02em;
 }
 
+/* section of our portfolio*/
+.portfolio-content {
+  background: #FFF;
+}
+
 h2 {
   color: #2E2F42;
   font-family: Roboto;
   font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+
+.title-of-portfolio {
+  color: #2E2F42;
+  font-family: Roboto;
+  font-size: 36px;
+  text-align: center;
   font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -228,10 +244,12 @@ h2 {
   letter-spacing: 0.02em;
 }
 
+/*Footer*/
 .footer-content {
   background-color: #2E2F42;
 }
 
+/*Logo first part and second part */
 .logo .second-part {
   color: #F4F4FD;
   font-family: "Raleway", sans-serif;
@@ -242,6 +260,7 @@ h2 {
   text-transform: uppercase;
 }
 
+/*Text for footer*/
 .footer-text {
   color: #F4F4FD;
   font-family: Roboto;
