--- a/css/style.css
+++ b/css/style.css
@@ -240,14 +240,15 @@ span {
   color: #fff;
   font-family: Roboto;
   font-size: 56px;
+  text-align: center;
   font-weight: 700;
-  line-height: 0.93;
+  line-height: 1.17;
   letter-spacing: 0.02em;
 }
 
 .button {
   color: #fff;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -256,7 +257,7 @@ span {
   cursor: pointer;
 }
 
-.button:hover {
+.button:active {
   background: #404bbf;
 }
 
