--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ span {
   font-size: 56px;
   text-align: center;
   font-weight: 700;
-  line-height: 1.17;
+  line-height: 1.07;
   letter-spacing: 0.02em;
 }
 
@@ -259,7 +259,12 @@ span {
 }
 
 .button:active {
-  background: #404bbf;
+  background-color: #404BBF;
+}
+
+.button:hover {
+  background-color: ;
+  #404BBF
 }
 
 h3 {
