--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,11 @@ span {
   background-color: #404BBF;
 }
 
+.menu-list li:first-child:focus {
+  color: #404BBF;
+}
+
+
 
 /*contacts*/
 .contacts {
