--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ span {
   letter-spacing: 0.02em;
 }
 
+.contacts-link:hover {
+  color: #404BBF;
+}
+
 .contacts-list li:first-child:focus {
   color: #404BBF;
 }
