--- a/css/style.css
+++ b/css/style.css
@@ -52,181 +52,187 @@ span {
   color: #404BBF;
 }
 
-.menu-list li:first-child:focus:active {
+.menu-list li:first-child:focus {
   color: #404BBF;
 }
 
-/*contacts*/
-.contacts {
-  color: #434455;
-  background-color: #FFFFFF;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
+.menu-list li:first-child:active {
+  color: #404bbf;
 
-.contacts-link {
-  color: #434455;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
+  /*contacts*/
+  .contacts {
+    color: #434455;
+    background-color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 
-.contacts-link:hover {
-  color: #404BBF;
-}
+  .contacts-link {
+    color: #434455;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 
-.contacts-list li:first-child:focus:active {
-  color: #404BBF;
-}
+  .contacts-link:hover {
+    color: #404BBF;
+  }
+
+  .contacts-list li:first-child:focus {
+    color: #404BBF;
+  }
+
+  .contacts-list li:first-child:active {
+    color: #404BBF;
+  }
+
+  /*HERO SECTION*/
+  .hero-section {
+    background-color: #2e2f42;
+    text-align: center;
+  }
+
+  .hero-title {
+    color: #fff;
+    font-family: Roboto;
+    font-size: 56px;
+    text-align: center;
+    font-weight: 700;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+  }
+
+  /*BUTTON*/
+  .button {
+    color: #fff;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    background: #4d5ae5;
+    cursor: pointer;
+  }
+
+  .button:hover:active {
+    background-color: #404BBF;
+  }
 
 
-/*HERO SECTION*/
-.hero-section {
-  background-color: #2e2f42;
-  text-align: center;
-}
+  h3 {
+    color: #2E2F42;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
 
-.hero-title {
-  color: #fff;
-  font-family: Roboto;
-  font-size: 56px;
-  text-align: center;
-  font-weight: 700;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-}
+  p {
+    color: #434455;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 
-/*BUTTON*/
-.button {
-  color: #fff;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  background: #4d5ae5;
-  cursor: pointer;
-}
+  .content-our-team {
+    background-color: #F4F4FD;
+  }
 
-.button:hover:active {
-  background-color: #404BBF;
-}
+  .team-title {
+    color: #2E2F42;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
 
+  .team-text {
+    color: #434455;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 
-h3 {
-  color: #2E2F42;
-  font-family: Roboto;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-}
+  /* section of our portfolio*/
+  .portfolio-content {
+    background: #FFFFFF;
+  }
 
-p {
-  color: #434455;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
+  h2 {
+    color: #2E2F42;
+    font-family: Roboto;
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+  }
 
-.content-our-team {
-  background-color: #F4F4FD;
-}
+  .title-of-portfolio {
+    color: #2E2F42;
+    font-family: Roboto;
+    font-size: 36px;
+    text-align: center;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+  }
 
-.team-title {
-  color: #2E2F42;
-  font-family: Roboto;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-}
+  .portfolio-title {
+    color: #2E2F42;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
 
-.team-text {
-  color: #434455;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
+  .portfolio-text {
+    color: #434455;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 
-/* section of our portfolio*/
-.portfolio-content {
-  background: #FFFFFF;
-}
+  /*Footer*/
+  .footer-content {
+    background-color: #2E2F42;
+  }
 
-h2 {
-  color: #2E2F42;
-  font-family: Roboto;
-  text-align: center;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-}
+  /*Logo first part and second part */
+  .logo .second-part {
+    color: #F4F4FD;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+  }
 
-.title-of-portfolio {
-  color: #2E2F42;
-  font-family: Roboto;
-  font-size: 36px;
-  text-align: center;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-}
-
-.portfolio-title {
-  color: #2E2F42;
-  font-family: Roboto;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-}
-
-.portfolio-text {
-  color: #434455;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
-/*Footer*/
-.footer-content {
-  background-color: #2E2F42;
-}
-
-/*Logo first part and second part */
-.logo .second-part {
-  color: #F4F4FD;
-  font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
-/*Text for footer*/
-.footer-text {
-  color: #F4F4FD;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
+  /*Text for footer*/
+  .footer-text {
+    color: #F4F4FD;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
