--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,10 @@ span {
     color: #404BBF;
   }
 
+  .contacts-link:focus {
+    color: #404bbf;
+  }
+
   .contacts-list li:first-child:focus {
     color: #404BBF;
   }
