--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ span {
   color: #404bbf;
 }
 
+.menu-list li:first-child .menu-link:focus {
+  color: #404BBF;
+}
+
 /*CONTACTS*/
 .contacts {
   font-style: normal;
@@ -126,7 +130,7 @@ span {
 .button {
   background-color: #4D5AE5;
   color: #FFFFFF;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -144,6 +148,10 @@ span {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+}
+
+.button:focus {
+  background-color: #404BBF;
 }
 
 /*FEATURES_CONTENT*/
