--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@ ul.list-our-team li {
 .title-of-portfolio {
   color: #2E2F42;
   font-family: Roboto;
+  text-align: center;
   font-size: 36px;
   font-style: normal;
   font-weight: 700;
